[package]
name = "whitehole-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
in_str = "0.1.1"
whitehole = "0.5.0"
nom = "8.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "json_lexer"
harness = false

[[bench]]
name = "json_parser"
harness = false
